--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "axios": "^1.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.3"
   },
